improve 2008, will start work on 2013

--- a/templates/2008/_layout.twig
+++ b/templates/2008/_layout.twig
@@ -323,7 +323,7 @@
 	</div>
 
 	<div id="copyright">
-		Copyright © 2017-2021 squareBracket 
+		By the squareBracket Contributors - 2020-{{ 'now' | date('Y') }}
 	</div>      
 </div>
 </body></html>
