profiles and registering

--- a/templates/2008/_layout.twig
+++ b/templates/2008/_layout.twig
@@ -25,7 +25,7 @@
             </div>
 	{% else %}
     <div id="util-links" class="normal-utility-links">
-                <span class="util-item first"><b><a href="/signup.php" onclick="">Sign Up</a></b></span>
+                <span class="util-item first"><b><a href="/register.php" onclick="">Sign Up</a></b></span>
         <span class="util-item"><a href="/viewing_history.php">Viewing History</a></span>
         <span class="util-item"><a href="/help.php">Help</a></span>
         <span class="util-item"><a href="/login.php" class="loginBoxZ eLink" onclick="">Log In</a></span>
@@ -33,7 +33,7 @@
 	{% endif %}
         </div>
         <div class="nav">
-            <div class="nav-item first  selected " id="nav-item-home">
+            <div class="nav-item first" id="nav-item-home">
                 <span class="leftcap"></span>
                 <a class="content" href="/">Home</a>
                 <span class="rightcap"></span>
