--- a/templates/2008/components/profileimage.twig
+++ b/templates/2008/components/profileimage.twig
@@ -1,1 +1,1 @@
-{% if file_exists %}{% set imgSrcPath = '/assets/profpic/' ~ data ~ '.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% else %}{% set imgSrcPath = '/assets/profiledef.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% endif %}
+{% if file_exists %}{% set imgSrcPath = '/assets/profpic/' ~ data ~ '.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% else %}{% set imgSrcPath = '/assets/2008/no_videos_140.png' %}{% autoescape %}{{ imgSrcPath | raw }}{% endautoescape %}{% endif %}
