--- a/templates/2008/watch.twig
+++ b/templates/2008/watch.twig
@@ -132,7 +132,7 @@ function vidres_change(num) {
 }
 </script>
 <div id="watch-vid-title">
-	<div>gay people on game boy color</div>
+	<div>{{ video.title }}</div>
 </div>
 <!-- Left side of the watch page where the video player is !-->
 <div id="watch-this-vid">
