--- a/templates/2008/index.twig
+++ b/templates/2008/index.twig
@@ -1,6 +1,187 @@
 {% extends "_layout.twig" %}
 
 {% block content %}
+<style type="text/css">
+.homepage-block-heading a {
+    font-size: 11px;
+    font-weight: normal;
+    text-decoration: none;
+    position: relative;
+    bottom: 1.5px;
+}
+.homepage-block-heading a:hover {
+    text-decoration: underline;
+}
+.homepage-sponsored-video.fav {
+    float: left;
+    width: 23%;
+    height: 90px;
+    padding: 0 10px 0 0;
+    animation: wait .5s linear, rotateOnX 1s .5s ease-out !important;
+    opacity: .85;
+    transition: opacity .1s linear, padding-top .1s linear, margin-bottom .1s linear;
+    cursor: pointer;
+}
+.homepage-sponsored-video.fav1:hover {
+    padding-top: 5px;
+    margin-bottom: -5px;
+    opacity: 1;
+}
+.homepage-sponsored-video.fav2:hover {
+    padding-top: 5px;
+    margin-bottom: -5px;
+    opacity: 1;
+}
+.homepage-sponsored-video.fav3:hover {
+    padding-top: 5px;
+    margin-bottom: -5px;
+    opacity: 1;
+}
+.homepage-sponsored-video.fav4:hover {
+    padding-top: 5px;
+    margin-bottom: -5px;
+    opacity: 1;
+}
+.homepage-sponsored-video.fav1 {
+    float: left;
+    width: 23%;
+    height: 90px;
+    padding: 0 10px 0 0;
+    animation: wait .5s linear, rotateOnX 1s .5s ease-out !important;
+    opacity: .85;
+    transition: opacity .1s linear, padding-top .1s linear, margin-bottom .1s linear;
+    cursor: pointer;
+}
+.homepage-sponsored-video.fav2 {
+    float: left;
+    width: 23%;
+    height: 90px;
+    padding: 0 10px 0 0;
+    animation: wait .7s linear, rotateOnX 1s .7s ease-out !important;
+    opacity: .85;
+    transition: opacity .1s linear, padding-top .1s linear, margin-bottom .1s linear;
+    cursor: pointer;
+}
+.homepage-sponsored-video.fav3 {
+    float: left;
+    width: 23%;
+    height: 90px;
+    padding: 0 10px 0 0;
+    animation: wait .9s linear, rotateOnX 1s .9s ease-out !important;
+    opacity: .85;
+    transition: opacity .1s linear, padding-top .1s linear, margin-bottom .1s linear;
+    cursor: pointer;
+}
+.homepage-sponsored-video.fav4 {
+    float: left;
+    width: 23%;
+    height: 90px;
+    padding: 0 10px 0 0;
+    animation: wait 1.1s linear, rotateOnX 1s 1.1s ease-out !important;
+    opacity: .85;
+    transition: opacity .1s linear, padding-top .1s linear, margin-bottom .1s linear;
+    cursor: pointer;
+}
+@-webkit-keyframes rotateOnX {
+  from {
+            opacity: 0;
+            -webkit-transform: perspective(5em) rotateX(90deg) scale(.5);
+            transform: perspective(5em) rotateX(90deg) scale(.01);
+    }
+  to {
+            opacity: .85;
+            -webkit-transform: rotateX(0deg) scale(1);
+            transform: rotateX(0deg) scale(1);
+  }
+}
+@keyframes rotateOnX {
+  from {
+            opacity: 0;
+            -webkit-transform: perspective(5em) rotateX(90deg) scale(.5);
+            transform: perspective(5em) rotateX(90deg) scale(.01);
+    }
+  to {
+            opacity: .85;
+            -webkit-transform: rotateX(0deg) scale(1);
+            transform: rotateX(0deg) scale(1);
+  }
+}
+@-webkit-keyframes wait {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0;
+    }
+}
+@keyframes wait {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 0;
+    }
+}
+.vfacets.fav {
+    margin: 0;
+    position: relative;
+    bottom: 110px;
+    left: -1px;
+    text-align: right;
+    width: 120px;
+    padding-left: 0px;
+    padding-right: 3px;
+    opacity: 1;
+    cursor: default;
+    background: linear-gradient(-90deg, rgb(255, 255, 255, 0.9) 60%, rgba(255, 255, 255, 0) 100%);
+    height: 15px;
+    padding-top: 0px;
+    transition: opacity .1s;
+    pointer-events: none;
+}
+.dg:hover, .hLink:hover {
+    text-decoration: none;
+}
+.title.fav, .vtitle.fav {
+    font-weight: 100;
+    background: none;
+    position: relative;
+    bottom: 76px;
+    left: 0px;
+    text-align: left;
+    padding-left: 2px;
+    padding-bottom: 2px;
+    margin-right: 0px;
+    cursor: pointer;
+    transition: opacity .05s;
+    transition-delay: -1s;
+    opacity: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: none;
+    padding-top: 80px;
+    color: #191c99;
+}
+.title:hover.fav, .vtitle:hover.fav {
+    opacity: 1;
+}
+.vtitle.fav.smallText a {
+    text-decoration: none;
+    color: #191c99;
+    font-size: 11px;
+    position: relative;
+    transition: color .05s;
+    padding-top: 80px;
+    padding-right: 80px;
+    width: 120px;
+}
+.vtitle.fav.smallText a:hover {
+    color: #191c99;
+}
+.v120WrapperOuter.fav, .videoIconWrapperOuter.fav {
+    -webkit-box-reflect: below 0px linear-gradient(to bottom, #00000000 80%, rgba(255, 255, 255, 0.25) 100%);
+}
+</style>
 <div id="homepage-main-content">
         
         <div>
