--- a/templates/2008/user.twig
+++ b/templates/2008/user.twig
@@ -1,6 +1,164 @@
 {% extends "_layout-profile.twig" %}
 
 {% block content %}
+<style>
+.headerBox {
+    border: 1px solid {{ customProfile.highlightheader }} !important;
+}
+a{text-decoration:none;}a:hover{text-decoration:underline;}
+h1, h2, h3, h4, h5, h6 {
+  color: #222222 !important;
+}
+tr.commentsTableNBFull td {
+  border-bottom: 1px solid #3399cc !important;
+}
+tr.bulletinTableFull td { 
+  border-bottom: 1px dashed #3399cc !important;
+  border-right: 1px solid #3399cc !important;
+}
+.headerTitleLeft, .headerTitle {
+  color: #ffffff !important;
+}
+tr.bulletinTableFull th {
+  border-bottom: 1px solid #3399cc !important;
+  border-right: 1px solid #3399cc !important;
+}
+tr.bulletinTableNBFull td {
+  background-color: #3399cc;
+  border-bottom: 1px solid #3399cc !important;
+  border-right: 1px solid #3399cc !important;
+}
+.bulletinTableFull {
+  background-color: #ecf4fb !important;
+}
+.video-thumb-micro, .video-thumb-small, .video-thumb-medium, .video-thumb-large, .video-thumb-jumbo {
+  border: 3px double #3399cc !important;
+  background-color: #ecf4fb !important;
+}
+.vimg90 {
+  border: 1px solid #3399cc !important;
+}
+.imgBrdr {
+  border: 1px solid #3399cc !important;
+}
+.headerBoxOpacity[class] {
+    background-color: {{ customProfile.highlightheader }} !important;
+}
+.basicBoxesOpacity[class] {
+    background-color: {{ customProfile.highlightinside }} !important;
+}
+.headerRCBox .content  {
+  background: #3399cc  !important;
+}
+.headerRCBox .rch * {
+  background: #3399cc  !important;
+}
+.headerRCBox .rch1 {
+  border-right: 1px solid #3399cc !important;
+  border-left: 1px solid #3399cc !important;
+}
+.footerBox {
+  background-color: #3399cc !important;
+  border: 1px solid #3399cc !important;
+}
+.pagingDiv {
+  background: #3399cc;
+  color: #222222 !important;
+}
+.pagerCurrent {
+  color: #3399cc  !important;
+  border: 1px solid #3399cc !important;
+}
+.pagerNotCurrent {
+  background-color: #ffffff !important; 
+}
+.headerRCBox .rch2 {
+  border-right: 1px solid #3399cc !important;
+  border-left: 1px solid #3399cc !important;
+}
+.headerRCBox .rch3 {
+  border-right: 1px solid #3399cc !important;
+  border-left: 1px solid #3399cc !important;
+}
+.headerRCBox .rch4 {
+  border-right: 1px solid #3399cc !important;
+  border-left: 1px solid #3399cc !important;
+}
+.headerRCBox .rch5 {
+  border-right: 1px solid #3399cc !important;
+  border-left: 1px solid #3399cc !important;
+}
+a.masthead:visited {
+  color: #03C !important;
+}
+a.masthead:link {
+  color: #03C !important;
+}
+a.masthead:active {
+  color: #03C !important;
+}
+a.headerLink:visited {
+  color: #03C !important;
+}
+a.headerLink:link {
+  color: #03C !important;
+}
+a.headerLink:active {
+  color: #03C !important;
+}
+#profileSubNav {
+    color: {{ customProfile.fontcolor }} !important;
+}
+a:link, a:visited, a:active {
+    color: {{ customProfile.link }} !important;
+}
+body { 
+background-color: {{ customProfile.background }} !important;
+}
+#pBox {
+    margin-bottom: 15px;
+    border-bottom: 1px solid {{ customProfile.regularheader }} !important;
+}
+
+.highlightBoxesOpacity[class] {
+    background: {{ customProfile.highlightinside }} !important;
+}
+.highlightBoxes, .basicBoxes {
+    border: 1px solid {{ customProfile.regularheader }} !important;
+    color: {{ customProfile.fontcolor }};
+}
+.vfacets, .runtime {
+    color: #222222 !important;
+}
+.vfacets a:link, a:visited {
+    font-size: 11px;
+}
+#pbox {
+    border-bottom: 1px solid {{ customProfile.regularheader }} !important;
+}
+tr.commentsTableFull td, tr.bulletinTable td {
+    border-bottom: 1px dashed #3399cc !important;
+}
+tr.bulletinTable td.firstCol {
+    border-right: 1px solid #3399cc !important;
+}
+.user-thumb-micro, .user-thumb-small, .user-thumb-medium, .user-thumb-large, .user-thumb-jumbo {
+    border: 3px double #3399cc !important;
+    background-color: transparent;
+}
+.vimg, .vimg70 {
+    border: 1px solid #3399cc !important;
+}
+.labels {
+    color: #222222 !important;
+}
+tr.commentsTableFull td {
+    color: #222222 !important;
+}
+.flaggingText {
+    color: {{ customProfile.fontcolor }} !important;
+}
+</style>
         <!--Begin Page Container Table-->
 <div class="profileTitleLinks">
         <div id="profileSubNav">
