early inbox shit

--- a/templates/2008/user.twig
+++ b/templates/2008/user.twig
@@ -230,8 +230,8 @@ tr.commentsTableFull td {
                 
                 
                 
-                <!-- <span class="smallText">Country:</span> <b>United Sex of My Hamster</b>
-                <br> -->
+                <span class="smallText">Country:</span> <b>KonqiLand</b>
+                <br>
 
                 
                 
