--- a/templates/2008/watch.twig
+++ b/templates/2008/watch.twig
@@ -313,7 +313,7 @@ function vidres_change(num) {
 			</div>	
 	<span id="comment_spam_bug_commentid" class="watch-comment-spam-bug">Marked as spam</span>
 	<div id="reply_comment_form_id_commentid" class="watch-comment-action">
-			<a onclick="document.getElementById('comment_text').value = '@PF94onBitView:';">Reply</a> 
+			<a onclick="document.getElementById('comment_text').value = '@{{ comment.u_name }}:';">Reply</a> 
 	</div>
 			<div class="clearL"></div>
 		</div>
